--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "productName": "my-app",
+  "name": "my-app090899",
+  "productName": "my-app090899",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".webpack/main",
